모바일쪽 api 수정
